# python-sdk

./: CLAUDE.md  CONTRIBUTING.md  GENERATION_FILES.md  GENERATION_FLOW.md  HISTORY.txt  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
api/: http-v4.yaml  main_api_v4.yaml  oauth2.yaml
api/asyncapi/private/: authorize.yaml  balance_margin.yaml  balance_spot.yaml  borrows.yaml  borrows_events.yaml  deals.yaml  margin_positions_events.yaml  orders_executed.yaml  orders_pending.yaml  positions.yaml
api/asyncapi/public/: book_ticker.yaml  depth.yaml  kline.yaml  lastprice.yaml  market.yaml  market_today.yaml  service.yaml  trades.yaml
config/: openapi-main-api.json  openapi-oauth.json  openapi-public-api.json  sdk_config.yaml
configs/openapi/: main_api_config.yaml  oauth2_config.yaml  public_api_config.yaml
examples/: collateral_examples.py  main_examples.py  trade_examples.py  ws_example.py
scripts/: create_sdk_structure.py  fix_generated_imports.py  generate_complete_sdk.py  generate_http_openapi.sh  generate_websocket_handlers.py  generate_websocket_models.py  validate_specs.py
src/whitebit/: CONTRIBUTING.md  __init__.py  client.py  environment.py  raw_client.py
src/whitebit/account_endpoints/: client.py  raw_client.py
src/whitebit/codes/: __init__.py  (+2 more)
tests/: test.py
whitebit/: __init__.py  __version__.py  client.py
whitebit/collateral/: __init__.py
whitebit/stream/: __init__.py  ws.py
whitebit/trade/: __init__.py
whitebit_sdk/: __init__.py  client.py  config.py  exceptions.py
whitebit_sdk/utils/: auth.py  signature.py
whitebit_sdk/websocket/: base.py
(+465 files in other folders)
