[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whitebit-python-sdk"
version = "1.1.8"
description = "A Python SDK for WhiteBit cryptocurrency exchange API"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["whitebit", "cryptocurrency", "exchange", "api", "sdk", "trading"]
authors = [
    {name = "WhiteBit SDK Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "requests>=2.28.1,<3.0.0",
    "websockets>=10.4,<11.0",
    "responses>=0.23.1",
    "urllib3>=1.26.15,<2.0.0",
    "pydantic>=1.10.0,<3.0.0",
    "httpx>=0.23.0,<1.0.0",
]

[project.urls]
Homepage = "https://www.whitebit.com"
Documentation = "https://whitebit-exchange.github.io/api-docs/"
Repository = "https://github.com/whitebit-exchange/python-sdk"
Issues = "https://github.com/whitebit-exchange/python-sdk/issues"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["whitebit*"]
namespaces = false

[tool.setuptools.package-data]
whitebit = ["py.typed"]
